# src/models/Agendamento.ts
@@ -13,7 +13,7 @@ interface AgendamentoAttributes {
     id: bigint;
     data: Date;
     hora: string;
-    //status: string;
+    status: string;
     servicoId: bigint;
     clienteId: bigint;
     provedorId: bigint;
@@ -23,7 +23,7 @@ class Agendamento extends Model<AgendamentoAttributes> implements AgendamentoAtt
     declare id: bigint;
     declare data: Date;
     declare hora: string;
-    //declare status: 'pendente' | 'confirmado' | 'cancelado';
+    declare status: string;
     declare servicoId: bigint;
     declare clienteId: bigint;
     declare provedorId: bigint;
@@ -65,10 +65,10 @@ Agendamento.init(
             },
             allowNull: false,
         },
-        // status: {
-        //     type: DataTypes.ENUM('pendente', 'confirmado', 'cancelado'),
-        //     allowNull: false,
-        // },
+        status: {
+            type: DataTypes.STRING,
+            allowNull: false,
+        },
         provedorId: {
             type: DataTypes.BIGINT,
             references: {
@@ -84,6 +84,6 @@ Agendamento.init(
         timestamps: true,
     }
 );
-Agendamento.sync({ force: true })
+Agendamento.sync({ force: false })
 
 export default Agendamento;
